🔧 Fix z-index of footer as body::before covers
- footer url links became inaccessible when body::before was visible

--- a/css/style.css
+++ b/css/style.css
@@ -647,6 +647,7 @@ form {
 /* ===== FOOTER ===== */
 
 footer {
+  z-index: 1; /*<--- fix for footer to sit above body::before (urls became unclickable) */
   margin-top: auto;
   color: var(--fc-footer);
   font-size: var(--fs-footer);
